--- a/joker/Dockerfile
+++ b/joker/Dockerfile
@@ -1,6 +1,6 @@
 FROM fusuf/whatsasena:latest
 
-RUN git clone https://github.com/jockersir/jocker_v2 /root/WhatsAsenaDuplicated
+RUN git clone https://github.com/ADIL0448/chatt_bot/root/WhatsAsenaDuplicated
 WORKDIR /root/WhatsAsenaDuplicated/
 ENV TZ=Europe/Istanbul
 RUN npm install supervisor -g
